--- a/src/sass/_varibles.scss
+++ b/src/sass/_varibles.scss
@@ -2,4 +2,4 @@ $gray-color : #B1AEAE;
 $light-gray-color :#f0f0f0;
 $main-color : #ff640b;
 $color-white:#ffffff;
-$color-dark-white:#928e8e;
+$color-dark-white:#F2F2F0;
